# tech-job-market-intelligence-platform

./: .gitignore  README.md  WORKING_AGREEMENT.md  docker-compose.yml  pyproject.toml
config/: greenhouse_companies.yml
docs/: ai.md  architecture.md  data_model.md  learning_context.md  mvp_build_plan.md  overview.md  product.md  resume_strategy.md  source_discovery.md
docs/superpowers/plans/: 2026-05-10-milestone-3-canonical-jobs.md
docs/superpowers/specs/: 2026-05-10-database-environment-separation-design.md  2026-05-10-milestone-2-bronze-raw-payloads-design.md  2026-05-10-milestone-3-canonical-jobs-design.md
sql/: 001_init.sql  002_canonical_jobs.sql
src/job_market_intel/: __init__.py  bronze.py  canonical_jobs.py  config.py  db.py  greenhouse.py  ingest_greenhouse.py  preview_greenhouse.py  raw_payloads.py  silver.py  transform_canonical_jobs.py
tests/: test_bronze.py  test_canonical_jobs.py  test_db.py  test_ingest_greenhouse.py  test_postgres_integration.py  test_raw_payloads.py  test_silver.py  test_transform_canonical_jobs.py
